--- a/bio/index.html
+++ b/bio/index.html
@@ -12,7 +12,7 @@
     <div style="margin:20px">
 <br/>
 <br/><p><strong>words</strong></p>
-<p>William Hazard makes poems with computers. Recent work can be found in <a href="https://voicemailpoems.org/"><em>Voicemail Poems</em></a>, <a href="https://www.instagram.com/bringablanketreadingseries/"><em>Bring a Blanket Zine</em></a>, <a href="https://ghostproposal.com/"><em>Ghost Proposal</em></a>, <a href="https://beloved.wtf/"><em>Beloved Radio</em></a>, <a href="https://audioflaregun.com/"><em>Audio Flare Gun</em></a>, and on <a href="https://github.com/williamthazard/">GitHub</a>. He teaches at <a href="https://liberalarts.temple.edu/academics/departments-and-programs/intellectual-heritage">Temple University</a>. He edits at <a href="https://overpassbooks.bigcartel.com/">Overpass Books</a>. He hangs out at <a href="https://llllllll.co">llllllll.co</a></p>
+<p><a href="../">William Hazard</a> makes poems with computers. Recent work can be found in <a href="https://voicemailpoems.org/"><em>Voicemail Poems</em></a>, <a href="https://www.instagram.com/bringablanketreadingseries/"><em>Bring a Blanket Zine</em></a>, <a href="https://ghostproposal.com/"><em>Ghost Proposal</em></a>, <a href="https://beloved.wtf/"><em>Beloved Radio</em></a>, <a href="https://audioflaregun.com/"><em>Audio Flare Gun</em></a>, and on <a href="https://github.com/williamthazard/">GitHub</a>. He teaches at <a href="https://liberalarts.temple.edu/academics/departments-and-programs/intellectual-heritage">Temple University</a>. He edits at <a href="https://overpassbooks.bigcartel.com/">Overpass Books</a>. He hangs out at <a href="https://llllllll.co">llllllll.co</a></p>
 <hr/>
 <p>updated 241206 – williamthazard [at] pm.me</p>
 </div>
