--- a/bio/index.html
+++ b/bio/index.html
@@ -15,7 +15,7 @@
 <p><a href="../">William Hazard</a> makes poems with computers. Recent work can be found in <a href="https://voicemailpoems.org/"><em>Voicemail Poems</em></a>, <a href="https://www.instagram.com/bringablanketreadingseries/"><em>Bring a Blanket Zine</em></a>, <a href="https://ghostproposal.com/"><em>Ghost Proposal</em></a>, <a href="https://beloved.wtf/"><em>Beloved Radio</em></a>, <a href="https://audioflaregun.com/"><em>Audio Flare Gun</em></a>, and on <a href="https://github.com/williamthazard/">GitHub</a>. He teaches at <a href="https://liberalarts.temple.edu/academics/departments-and-programs/intellectual-heritage">Temple University</a>. He edits at <a href="https://overpassbooks.bigcartel.com/">Overpass Books</a>. He hangs out at <a href="https://llllllll.co">llllllll.co</a></p>
 <hr/>
 <p class='center'>updated 241206 – williamthazard [at] pm.me</p>
-<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
+<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
 </div>
 </body>
 </html><!doctype html>
