--- a/bio/index.html
+++ b/bio/index.html
@@ -12,7 +12,7 @@
     <div style="margin:20px">
 <br/>
 <br/><p><strong>words</strong></p>
-<p><a href="../">William Hazard</a> makes poems with computers. Recent work can be found in the <a href="https://moonstone-arts-center.square.site/"><em>Moonstone Arts 2024 Featured Poets Anthology</em></a>, <a href="https://catalogs.atwhatcost.me/"><em>At What Cost Catalog</em></a>, <a href="https://voicemailpoems.org/"><em>Voicemail Poems</em></a>, <a href="https://www.instagram.com/bringablanketreadingseries/"><em>Bring a Blanket Zine</em></a>, <a href="https://ghostproposal.com/"><em>Ghost Proposal</em></a>, and elsewhere. He teaches at <a href="https://liberalarts.temple.edu/academics/departments-and-programs/intellectual-heritage">Temple University</a>. He hangs out at <a href="https://llllllll.co">llllllll.co</a>.</p>
+<p><a href="../">William Hazard</a> makes poems with computers. Recent work can be found in the <a href="https://moonstone-arts-center.square.site/"><em>Moonstone Arts 2024 Featured Poets Anthology</em></a>, <a href="https://catalogs.atwhatcost.me/"><em>At What Cost Catalog</em></a>, <a href="https://voicemailpoems.org/"><em>Voicemail Poems</em></a>, <a href="https://www.instagram.com/bring_a_blanket/"><em>Bring a Blanket Zine</em></a>, <a href="https://ghostproposal.com/"><em>Ghost Proposal</em></a>, and elsewhere. He teaches at <a href="https://liberalarts.temple.edu/academics/departments-and-programs/intellectual-heritage">Temple University</a>. He hangs out at <a href="https://llllllll.co">llllllll.co</a>.</p>
 <p><strong>photos</strong></p>
 <p><img src="pics/headshot.png" alt="headshot" /></p>
 <p><img src="pics/events.jpeg" alt="events" /></p>
