--- a/bio/index.html
+++ b/bio/index.html
@@ -12,13 +12,13 @@
     <div style="margin:20px">
 <br/>
 <br/><p><strong>words</strong></p>
-<p><a href="../">William Hazard</a> makes poems with computers. Recent work can be found in the <a href="https://moonstone-arts-center.square.site/"><em>Moonstone Arts 2024 Featured Poets Anthology</em></a>, <a href="https://catalogs.atwhatcost.me/"><em>At What Cost Catalog</em></a>, <a href="https://voicemailpoems.org/"><em>Voicemail Poems</em></a>, <a href="https://www.instagram.com/bring_a_blanket/"><em>Bring a Blanket Zine</em></a>, <a href="https://ghostproposal.com/"><em>Ghost Proposal</em></a>, and elsewhere. He teaches at <a href="https://liberalarts.temple.edu/academics/departments-and-programs/intellectual-heritage">Temple University</a>. He hangs out at <a href="https://llllllll.co">llllllll.co</a>.</p>
+<p><a href="../">William Hazard</a> makes poems with computers. Recent work can be found in <a href="https://www.action-spectacle.com/"><em>Action, Spectacle</em></a>, the <a href="https://moonstone-arts-center.square.site/"><em>Moonstone Arts 2024 Featured Poets Anthology</em></a>, <a href="https://catalogs.atwhatcost.me/"><em>At What Cost Catalog</em></a>, <a href="https://voicemailpoems.org/"><em>Voicemail Poems</em></a>, <a href="https://ghostproposal.com/"><em>Ghost Proposal</em></a>, and elsewhere. He teaches at <a href="https://liberalarts.temple.edu/academics/departments-and-programs/intellectual-heritage">Temple University</a>. He hangs out at <a href="https://llllllll.co">llllllll.co</a>.</p>
 <p><strong>photos</strong></p>
 <p><img src="pics/headshot.png" alt="headshot" /></p>
 <p><img src="pics/events.jpeg" alt="events" /></p>
 <p><img src="pics/header.jpeg" alt="header" /></p>
 <hr/>
-<p class='center'>updated 250430 – williamthazard [at] pm.me</p>
+<p class='center'>updated 251014 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
 </div>
 </body>
